# AI-Mr-Squiggle

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  constants.ts  native.ts  openrouter.ts  secureStorage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.ios.plist  ios-project.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src/ai/: canvas-svg.ts  collaboration.ts  concept-seeds.ts  critique.ts  gestalt.ts  ideation.ts  parse.ts  prompts.ts  providers.ts  request.ts  schemas.ts  settings.ts  svg.ts
src/canvas/: feedback.ts  grid.ts  instruments.ts  marks.ts
src/lib/: autosave.ts  bounds.ts  canvas-size.ts  color.ts  coordinates.ts  geometry.ts  recent-subjects.ts
