[package]
name = "draw_assistant"
version = "0.1.0"
description = "AI Mr Squiggle drawing playground"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "draw_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"

# Keychain-backed API key storage on Apple platforms (iOS + macOS).
[target.'cfg(target_vendor = "apple")'.dependencies]
security-framework = "3"
